# lvgl-linux

./: CMakeLists.txt  LICENSE  README.md  shell.nix
cfg/: lv_conf.h
src/: main.cc  ui.cc
